// [START declaration]
syntax = "proto3";

import "google/protobuf/timestamp.proto";
// [END declaration]

service GameService { 
	// Basic function call, makes request and returns value
    
    rpc Connect(ConnectionRequest) returns (ConnectionResponse) {} //invite
	rpc Start(StartRequest) returns (StartResponse) {} //start
	rpc GameOver(WinnerRequest) returns (GameResult) {} //end
	rpc Move(MoveRequest) returns (NextTurn) {}
	rpc SendMessage(ChatMessage) returns (ChatMessage) {}
}

//  Connect
message ConnectionRequest {
//    string name = 1;
    string ip = 1;
    int32 port = 2;
}

message ConnectionResponse {
    bool success = 1;
    string description = 2;
}

// Start - needed?
message StartRequest { }

message StartResponse {
    bool success = 1;
}

// End game
message WinnerRequest {
    string name = 1;
}

message GameResult {
    string winner = 1;
    string loser = 2;
}

// Move -> modified, generate again
message MoveRequest {
    string name = 1
    FROM from = 2;
    TO to = 3;

    message FROM {
        double row = 1;
        double column = 2;
    }
    
    message TO {
        double row = 1;
        double column = 2;
    }

}

message NextTurn {
    string name = 1;
}

// Message
message ChatMessage {
    string name = 1;
    string content = 2;
    google.protobuf.Timestamp currentDateTime = 3;
}



